[tool.poetry]
name = "datastruct-module"
version = "0.1.0"
description = ""
authors = ["Denis <wolf1323@mail.ru>"]
readme = "README.md"
packages = [{include = "datastruct_module"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
